Add new storage system and support for join requests
The new storage system uses the local storage more and uses
seperate keys for each list to reduce syncing operations and
avoid length limitations. Also, join requests are parsed correctly.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -65,6 +65,10 @@
 	"message": "INVALID PASSWORD",
 	"description": "The message displayed when the given password is invalid"
     },
+    "listJoinRequest": {
+	"message": "New join request",
+	"description": "The subject displayed for a join request message"
+    },
     "actionRefreshAll": {
 	"message": "Refresh all lists",
 	"description": "The text for the refresh all action option"
