--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -129,6 +129,18 @@
 	"message": "Export",
 	"description": "The caption for the export lists button"
     },
+    "buttonClearLists": {
+	"message": "Alle Listen entfernen",
+	"description": "The caption for the clear all lists button"
+    },
+    "buttonClearListsConfirm": {
+	"message": "Ja, ich bin sicher!",
+	"description": "The caption for the button to confirm the clear operation"
+    },
+    "warningClearLists": {
+	"message": "Dadurch werden alle Listen und ihre Zugangsdaten gelöscht. Sofern die Cloud-Synchronisation aktiviert ist, werden diese Daten ebenfalls gelöscht — Klicke auf diese Nachricht, um abzubrechen.",
+	"description": "The warning displayed before deleting all lists"
+    },
     "mailFrom": {
 	"message": "Von: $1",
 	"description": "The mail from field name"
@@ -193,6 +205,10 @@
 	"message": "Verarbeitungsfehler: Die gegebene Datei enthält ungültige Datensätze!",
 	"description": "The error displayed when the provided file could not be parsed as mailing lists correctly"
     },
+    "errClearError": {
+	"message": "Fehler: Ein Datensatz konnte nicht gelöscht werden!",
+	"description": "The error displayed when a list could not be deleted"
+    },
     "statusLoading": {
 	"message": "Lädt ...",
 	"description": "The status message displayed when loading the popup"
@@ -200,5 +216,13 @@
     "statusImportSuccessful": {
 	"message": "Import abgeschlossen. Importierte Datensätze: $1",
 	"description": "The message displayed after a successful import"
+    },
+    "statusClearSuccessful": {
+	"message": "Es wurden $1 Datensätze entfernt.",
+	"description": "The message displayed after a successful clear"
+    },
+    "settingUseSync": {
+	"message": "Listen über Browser-Cloud synchronisieren",
+	"description": "The text displayed on the use sync checkbox"
     }
 }
