--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -117,6 +117,14 @@
 	"message": "Details",
 	"description": "The caption for the mail details button"
     },
+    "buttonHeadersShow": {
+	"message": "Show Headers",
+	"description": "The caption for the show headers button on the detail page"
+    },
+    "buttonHeadersHide": {
+	"message": "Hide Headers",
+	"description": "The caption for the hide headers button on the detail page"
+    },
     "buttonDecideLater": {
 	"message": "Decide later",
 	"description": "The caption for the mail decide later button"
